--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -1,21 +1,22 @@
-version: 0.1
-component: build
-timeoutInSeconds: 6000
-runAs: root
-shell: bash
-
-steps:
-  - type: Command
-    name: "Building golang webapp"
-    command: |
-      go build -o golangapp
-    onFailure:                      # optional to handle any failure
-      - type: Command
-        command: |
-          echo "Build failed"
-        timeoutInSeconds: 400
-        runAs: root
-
+version: 0.2
+env:
+  variables:
+    GO_VERSION: 1.17
+phases:
+  install:
+    commands:
+      - wget https://storage.googleapis.com/golang/go${GO_VERSION}.linux-amd64.tar.gz
+      - tar -C /usr/local -xzf go${GO_VERSION}.linux-amd64.tar.gz
+      - export PATH="/usr/local/go/bin:$PATH" && export GOPATH="$HOME/go" && export PATH="$GOPATH/bin:$PATH"
+      
+  pre_build:
+    commands:
+      - echo “Start pre_build…”
+  build:
+    commands:
+      - echo “Start build…”
+      - go build -o golangapp
+      
 artifacts:
   files:
     - golangapp
