--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -1,13 +1,15 @@
 version: 0.2
 env:
   variables:
-    GO_VERSION: 1.17
+    GO_VERSION: 1.16.5
 phases:
   install:
     commands:
-      - wget https://storage.googleapis.com/golang/go${GO_VERSION}.linux-amd64.tar.gz
-      - tar -C /usr/local -xzf go${GO_VERSION}.linux-amd64.tar.gz
-      - export PATH="/usr/local/go/bin:$PATH" && export GOPATH="$HOME/go" && export PATH="$GOPATH/bin:$PATH"
+      - wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
+      - tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
+      - export PATH="/usr/local/go/bin:$PATH"
+      - export GOPATH="$HOME/go"
+      - export PATH="$GOPATH/bin:$PATH"
       
   pre_build:
     commands:
@@ -16,7 +18,7 @@ phases:
     commands:
       - echo “Start build…”
       - go build -o golangapp
-      
+
 artifacts:
   files:
     - golangapp
