--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -5,7 +5,9 @@ env:
 phases:
   install:
     commands:
+      - echo "download started"
       - wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
+      - echo "download finished"
       - tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
       - export PATH="/usr/local/go/bin:$PATH"
       - export GOPATH="$HOME/go"
