--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -1,14 +1,13 @@
 version: 0.2
 env:
   variables:
-    GO_VERSION: 1.16.5
+    GO_VERSION: 1.17
 phases:
   install:
     commands:
       - echo "download started"
-      - wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
-      - echo "download finished"
-      - tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
+      - yum install -y oracle-golang-release-el7
+      - yum install -y golang
       - export PATH="/usr/local/go/bin:$PATH"
       - export GOPATH="$HOME/go"
       - export PATH="$GOPATH/bin:$PATH"
