--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -1,7 +1,8 @@
-version: 0.2
-env:
-  variables:
-    GO_VERSION: 1.17
+version: 0.1
+component: build
+timeoutInSeconds: 6000
+runAs: root
+shell: bash
 phases:
   install:
     commands:
