--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -3,25 +3,14 @@ component: build
 timeoutInSeconds: 6000
 runAs: root
 shell: bash
-phases:
-  install:
-    commands:
-      - echo "download started"
-      - yum install -y oracle-golang-release-el7
-      - yum install -y golang
-      - export PATH="/usr/local/go/bin:$PATH"
-      - export GOPATH="$HOME/go"
-      - export PATH="$GOPATH/bin:$PATH"
-      
-  pre_build:
-    commands:
-      - echo “Start pre_build…”
-  build:
-    commands:
-      - echo “Start build…”
-      - go build -o golangapp
-
-artifacts:
-  files:
-    - golangapp
-    - buildspec.yml
+steps:
+  - type: Command
+    name: "Build golang app"
+    timeoutInSeconds: 400
+    command: |
+      wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
+      tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
+      export PATH="/usr/local/go/bin:$PATH"
+      export GOPATH="$HOME/go"
+      export PATH="$GOPATH/bin:$PATH"
+      go build -o golangapp
