--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -11,9 +11,8 @@ steps:
       wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
       tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
       export PATH="/usr/local/go/bin:$PATH"
-      echo "EXTRACTION extraction done"
-      export GOPATH="$HOME/go"
+      export GOPATH="/usr/local/go"
       export PATH="$GOPATH/bin:$PATH"
       echo "PATH SET"
       go version
-      go build
+      go build main.go 
