--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -6,13 +6,17 @@ shell: bash
 steps:
   - type: Command
     name: "Build golang app"
-    timeoutInSeconds: 6000
+    timeoutInSeconds: 600
     command: |
       wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
       tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
       export PATH="/usr/local/go/bin:$PATH"
       export GOPATH="/usr/local/go"
       export PATH="$GOPATH/bin:$PATH"
-      echo "PATH SET"
       go version
       go build main.go 
+
+outputArtifacts:
+  - name: golangWebApp
+    type: BINARY
+    location: golangWebApp
