--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -15,6 +15,7 @@ steps:
       export PATH="$GOPATH/bin:$PATH"
       go version
       go build -o golangWebApp
+      echo "till here"
 
 outputArtifacts:
   - name: golangWebApp
