--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -10,6 +10,7 @@ steps:
     command: |
       wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
       tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
+      rm -rf go1.16.5.linux-amd64.tar.gz
       export PATH="/usr/local/go/bin:$PATH"
       export GOPATH="/usr/local/go"
       export PATH="$GOPATH/bin:$PATH"
