--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -3,6 +3,9 @@ component: build
 timeoutInSeconds: 600
 runAs: root
 shell: bash
+env:
+  exportedVariables:
+    - version
 steps:
   - type: Command
     name: "Build golang app"
