--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -11,8 +11,8 @@ steps:
     name: "Build golang app"
     timeoutInSeconds: 600
     command: |
-      wget https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
-      tar -C /usr/local -xvzf go1.16.5.linux-amd64.tar.gz
+      wget -nv https://dl.google.com/go/go1.16.5.linux-amd64.tar.gz
+      tar -C /usr/local -xzf go1.16.5.linux-amd64.tar.gz
       rm -rf go1.16.5.linux-amd64.tar.gz
       export PATH="/usr/local/go/bin:$PATH"
       export GOPATH="/usr/local/go"
